[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Bus/bus_out_exterior.png" type="Texture" id=1]
[ext_resource path="res://assets/Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/Speech Text/SpeechText.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/Bus/bus_out_interior.png" type="Texture" id=4]
[ext_resource path="res://assets/Bus/pole_not_hover.png" type="Texture" id=5]
[ext_resource path="res://Rooms/BusOut.gd" type="Script" id=6]
[ext_resource path="res://assets/Bus/pole_hover.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 76, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 49.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 27.8352 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 14.2092

[node name="BusScene" type="Node2D"]
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 148.647, 93.018 )
scale = Vector2( 3.05655, 2.18527 )
current = true
limit_left = 0
limit_right = 410

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="SpeechText" parent="CanvasLayer" instance=ExtResource( 3 )]
visible = false
use_parent_material = true
margin_left = -0.529739
margin_top = 106.119
margin_right = -0.529724
margin_bottom = 108.039
rect_scale = Vector2( 0.993637, 1.08811 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="top" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 148.42, 135.864 )
shape = SubResource( 1 )

[node name="bottom" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 152, 186.296 )
shape = SubResource( 1 )

[node name="right" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 228, 130 )
shape = SubResource( 2 )

[node name="right2" type="Area2D" parent="StaticBody2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D/right2"]
position = Vector2( 92.0782, 152.623 )
shape = SubResource( 4 )

[node name="bus_out_interior" type="Sprite" parent="."]
position = Vector2( 157.442, 90.7714 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 154.147, 162.676 )
scale = Vector2( 3.06442, 2.2579 )

[node name="bus_out_exterior" type="Sprite" parent="."]
position = Vector2( 157.442, 90.7714 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 35.5848, 73.7916 )
shape = SubResource( 3 )

[node name="pole_hover" type="Sprite" parent="Area2D"]
position = Vector2( 36.8115, 92.8056 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="pole_not_hover" type="Sprite" parent="Area2D"]
position = Vector2( 36.8115, 92.8056 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )

[connection signal="area_entered" from="StaticBody2D/right2" to="." method="_on_right2_area_entered"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
